# cytoscape-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  cytoscape-mcp-wrapper.sh  pyproject.toml  requirements.txt  test_cytoscape.py
.github/workflows/: ci.yml  release.yml
cytoscape_mcp/: __init__.py  server.py
docs/: api.md  installation.md  py4cytoscape_reference.md  py4cytoscape_usage_issues.md
examples/: __init__.py  advanced_workflow.py  basic_usage.py
tests/: __init__.py  conftest.py  test_server.py
