[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytoscape-mcp"
version = "0.1.0"
description = "MCP Server for Cytoscape Desktop Control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Cytoscape MCP Contributors" },
]
keywords = [
    "cytoscape",
    "mcp",
    "network-analysis",
    "bioinformatics",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "py4cytoscape>=1.12.0",
    "mcp>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/cytoscape/cytoscape-mcp"
Repository = "https://github.com/cytoscape/cytoscape-mcp"
Issues = "https://github.com/cytoscape/cytoscape-mcp/issues"

[project.scripts]
cytoscape-mcp = "cytoscape_mcp.server:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
